# MLBETL

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: etl-daily.yml  test.yml
alembic/: env.py
alembic/versions/: 20260330_0001_initial_mlb_schema.py
data/raw/: 401814703.json
src/mlbetl/: __main__.py  clean.py  config.py  db.py  espn.py  http.py  run.py
src/mlbetl/api/: __init__.py  deps.py  main.py  schemas.py
src/mlbetl/api/routers/: games.py  stats.py  teams.py
tests/: _sqlite_schema.py  conftest.py  test_api.py  test_clean.py  test_espn.py
tests/fixtures/: summary_minimal.json
web/: README.md
web/src/app/: layout.tsx  page.tsx
web/src/app/_components/: date-range-filter.tsx  game-list-table.tsx  home-tab-nav.tsx  run-line-stats-table.tsx
web/src/app/games/[id]/: page.tsx
web/src/lib/: api.ts  types.ts
